fixed cookie banner z-index

--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -757,6 +757,7 @@ p.log {
 #cookies {
   background-color: #BDDDDC;
   position: fixed;
+  z-index: 2;
   width: 300px;
   bottom: 20px; left: 20px;
   border-radius: 10px;
